tests/compile/fail/borrow.stderr
error[E0499]: cannot borrow `dynref` as mutable more than once at a time
  --> tests/compile/fail/borrow.rs:10:11
   |
9  |         let a = dynref.borrow_mut();
   |                 ------------------- first mutable borrow occurs here
10 |         let b = dynref.borrow_mut();
   |                 ^^^^^^^^^^^^^^^^^^^ second mutable borrow occurs here
11 |         let _ = (a, b);
   |                  - first borrow later used here

error[E0502]: cannot borrow `dynref` as mutable because it is also borrowed as immutable
  --> tests/compile/fail/borrow.rs:16:10
   |
15 |     let a = dynref.borrow();
   |             --------------- immutable borrow occurs here
16 |     let b = dynref.borrow_mut();
   |             ^^^^^^^^^^^^^^^^^^^ mutable borrow occurs here
17 |     let _ = (a, b);
   |              - immutable borrow later used here

error[E0502]: cannot borrow `dynref` as immutable because it is also borrowed as mutable
  --> tests/compile/fail/borrow.rs:22:10
   |
21 |     let a = dynref.borrow_mut();
   |             ------------------- mutable borrow occurs here
22 |     let b = dynref.borrow();
   |             ^^^^^^^^^^^^^^^ immutable borrow occurs here
23 |     let _ = (a, b);
   |              - mutable borrow later used here
